--- a/css/stylemobile.css
+++ b/css/stylemobile.css
@@ -1,13 +1,61 @@
 @media (max-width: 1200px) {
     .hero-titel {
-        font-size: 20px;
-      }
-    .coffee-image {
-      display: flex;
-      max-width: 200px;
-      height: auto;
-      margin-left: auto;
-      margin-right: -50px;
+        font-size: 30px !important;
     }
-  }
-  
+
+    .herotext {
+        font-size: 18px !important;
+    }
+
+    .coffee-image {
+        display: flex;
+        max-width: 200px;
+        height: auto;
+        margin-left: auto;
+        margin-right: -50px;
+    }
+    .spender-message-header {
+        font-size: 30px !important;
+    }
+}
+
+@media (max-width: 991px) {
+    .hero-titel {
+        font-size: 25px !important;
+    }
+
+    .herotext {
+        font-size: 16px !important;
+    }
+
+    .coffee-image {
+        display: flex;
+        max-width: 180px;
+        height: auto;
+        margin-left: auto;
+        margin-right: -50px;
+    }
+    .spender-message-header {
+        font-size: 25px !important;
+    }
+}
+@media (max-width: 850px) {
+    .hero-titel {
+        font-size: 20px !important;
+    }
+
+    .herotext {
+        font-size: 14px !important;
+    }
+
+    .coffee-image {
+        display: flex;
+        max-width: 180px;
+        height: auto;
+        margin-left: auto;
+        margin-right: -50px;
+    }
+    .spender-message-header {
+        font-size: 20px !important;
+    }
+}
