--- a/css/stylemobile.css
+++ b/css/stylemobile.css
@@ -40,24 +40,19 @@
     }
 }
 @media (max-width: 850px) {
-    .header-section{
-        margin: 0;
-    }
+
     .hero-section {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 0;
+        flex-direction: column;
+        align-items: center;
       }
     
       .hero-section-left {
-        grid-column: 1 / span 1;
+        margin: 50px !important;
       }
     
       .hero-section-right {
-        grid-column: 2 / span 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        margin: 50px !important;
+        margin-top: -50px !important;
       }
     .hero-titel {
         font-size: 20px !important;
