--- a/css/stylemobile.css
+++ b/css/stylemobile.css
@@ -41,15 +41,23 @@
 }
 @media (max-width: 850px) {
     .hero-section {
-      flex-direction: column;
-    }
-  
-    .hero-section-left {
-      width: 100%;
-      margin: 50px 0;
-      padding: 20px;
-      text-align: center;
-    }
+        display: flex !important;
+        flex-wrap: wrap !important;
+        justify-content: center !important;
+      }
+      
+      .hero-section-left {
+        flex: 1 !important;;
+        margin-right: 50px !important;
+        margin-bottom: 0px !important;;
+      }
+      
+      .hero-section-right {
+        flex: 1 !important;;
+        margin-left: 50px !important;
+        margin-top: 0px !important;
+      }
+      
   
     .hero-titel {
       font-size: 20px;
@@ -63,7 +71,8 @@
       display: flex;
       max-width: 200px;
       height: auto;
-      margin: 50px auto;
+      margin: auto !important;
+      margin-bottom: 30px !important;;
     }
   
     .hero-section-right {
