--- a/css/stylemobile.css
+++ b/css/stylemobile.css
@@ -42,7 +42,34 @@
 }
 @media (max-width: 850px) {
 
- 
+    .menu {
+        display: none;
+      }
+    
+      .mobile-nav {
+        display: flex;
+        justify-content: flex-end;
+      }
+    
+      .hamburger-menu {
+        display: block;
+        cursor: pointer;
+        background-color: transparent;
+        border: none;
+        padding: 0;
+      }
+    
+      .bar {
+        display: block;
+        width: 30px;
+        height: 4px;
+        margin: 6px 0;
+        background-color: #333;
+      }
+    
+      .mobile-menu.show {
+        display: block !important;
+      }
     .hero-section {
         display: flex !important;
         flex-wrap: wrap !important;
