--- a/css/stylemobile.css
+++ b/css/stylemobile.css
@@ -42,19 +42,24 @@
 }
 @media (max-width: 850px) {
 
+
     .menu ul {
         display: none !important;
         position: absolute !important;
         top: 100% !important;
-        left: 0 !important;
-        width: 100% !important;
-        background-color: #f2f2f2 !important;
+        left: 50% !important;
+        transform: translateX(-50%) !important;
+        width: calc(100% + 60px) !important;
+        background-color: #333 !important;
         z-index: 1000 !important;
+        padding: 15px 0 !important;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
-    
       .menu ul li {
         display: block !important;
+        text-align: center;
       }
+      
     
       .hamburger-menu {
         display: block !important;
