--- a/css/stylemobile.css
+++ b/css/stylemobile.css
@@ -40,8 +40,10 @@
         font-size: 25px !important;
     }
 }
+.mobile-nav {
+    display: none !important;
+  }
 @media (max-width: 850px) {
-    @media (max-width: 850px) {
         .menu {
           display: none;
         }
