--- a/css/stylemobile.css
+++ b/css/stylemobile.css
@@ -1,3 +1,6 @@
+.mobile-nav {
+    display: none;
+  }
 @media (max-width: 1200px) {
     
     .hero-titel {
@@ -40,16 +43,14 @@
         font-size: 25px !important;
     }
 }
-.mobile-nav {
-    display: none !important;
-  }
+
 @media (max-width: 850px) {
         .menu {
-          display: none;
+          display: none !important;
         }
       
         .mobile-nav {
-          display: block;
+          display: block !important;
         }
       
         .mobile-nav .hamburger-menu {
