--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,7 @@
 }
 
 /* NAV-Menu. */
-.menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    flex-grow: 1;
-}
+
 
 .menu ul {
     list-style: none;
@@ -37,7 +31,7 @@
 
 .menu ul li a {
     transition: color 0.3s;
-    color: #fff;
+    color: #ffffff;
     font-size: 18px;
     font-family: "Raleway", sans-serif;
     font-weight: 500;
