--- a/css/stylemobile.css
+++ b/css/stylemobile.css
@@ -42,7 +42,14 @@
 }
 
 @media (max-width: 850px) {
+    .menu {
+        display: none;
+    }
+    .hamburger-menu {
+        display: block !important;
         
+    }
+
     .hero-section {
         display: flex !important;
         flex-wrap: wrap !important;
