--- a/css/style.css
+++ b/css/style.css
@@ -320,3 +320,20 @@ Footer {
     margin: 5px;
     transition: all 0.3s;
 }
+/* Hamburger menu styles */
+.hamburger-menu-icon {
+    display: none;
+    cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: 10px;
+}
+
+.hamburger-menu-line {
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: #333;
+    margin: 5px;
+    transition: all 0.3s;
+}
