--- a/css/stylemobile.css
+++ b/css/stylemobile.css
@@ -42,50 +42,31 @@
 }
 
 @media (max-width: 850px) {
-   /* Hide desktop menu */
-   .header ul {
-    display: none;
-}
+    /* Hide desktop menu */
+    nav ul {
+        display: none;
+    }
 
-/* Show hamburger menu icon */
-.hamburger-menu-icon {
-    display: block;
-}
+    /* Show hamburger menu icon */
+    .hamburger-menu-icon {
+        display: block;
+    }
 
-/* Hamburger menu open styles */
-#hamburger-menu-toggle:checked ~ .header ul {
-    display: block;
-    position: absolute;
-    top: 50px;
-    left: 0;
-    width: 100%;
-    background-color: #f1f1f1;
-    text-align: center;
-}
+    /* Hamburger menu open styles */
+    #hamburger-menu-toggle:checked ~ nav ul {
+        display: block;
+        position: absolute;
+        top: 50px;
+        left: 0;
+        width: 100%;
+        background-color: #f1f1f1;
+        text-align: center;
+    }
 
-.header ul li {
-    display: block;
-    padding: 10px;
-}
-    .hero-section {
-        display: flex !important;
-        flex-wrap: wrap !important;
-        justify-content: center !important;
-      }
-      
-      .hero-section-left {
-        flex: 1 !important;;
-        margin-right: 50px !important;
-        margin-bottom: 0px !important;;
-      }
-      
-      .hero-section-right {
-        flex: 1 !important;;
-        margin-left: 50px !important;
-        margin-top: 0px !important;
-      }
-      
-  
+    nav ul li {
+        display: block;
+        padding: 10px;
+    }
     .hero-titel {
       font-size: 20px;
     }
