--- a/css/stylemobile.css
+++ b/css/stylemobile.css
@@ -1,5 +1,5 @@
 @media (max-width: 1200px) {
-    
+
     .hero-titel {
         font-size: 30px !important;
     }
@@ -15,6 +15,7 @@
         margin-left: auto;
         margin-right: -50px;
     }
+
     .spender-message-header {
         font-size: 30px !important;
     }
@@ -36,52 +37,57 @@
         margin-left: auto;
         margin-right: -50px;
     }
+
     .spender-message-header {
         font-size: 25px !important;
     }
 }
 
 @media (max-width: 850px) {
+
     .hero-section {
         display: flex !important;
         flex-wrap: wrap !important;
         justify-content: center !important;
-      }
-      
-      .hero-section-left {
-        flex: 1 !important;;
+    }
+
+    .hero-section-left {
+        flex: 1 !important;
+        ;
         margin-right: 50px !important;
-        margin-bottom: 0px !important;;
-      }
-      
-      .hero-section-right {
-        flex: 1 !important;;
+        margin-bottom: 0px !important;
+        ;
+    }
+
+    .hero-section-right {
+        flex: 1 !important;
+        ;
         margin-left: 50px !important;
         margin-top: 0px !important;
-      }
-      
-  
+    }
+
+
     .hero-titel {
-      font-size: 20px;
+        font-size: 20px;
     }
-  
+
     .herotext {
-      font-size: 10px;
+        font-size: 10px;
     }
-  
+
     .coffee-image {
-      display: flex;
-      max-width: 200px;
-      height: auto;
-      margin: auto !important;
-      margin-bottom: 30px !important;;
+        display: flex;
+        max-width: 200px;
+        height: auto;
+        margin: auto !important;
+        margin-bottom: 30px !important;
+        ;
     }
-  
+
     .hero-section-right {
-      width: calc(30% - 50px);
-      margin: 50px auto;
-      padding: 20px;
-      text-align: center;
+        width: calc(30% - 50px);
+        margin: 50px auto;
+        padding: 20px;
+        text-align: center;
     }
-  }
-  
+}
