--- a/css/style.css
+++ b/css/style.css
@@ -90,12 +90,129 @@ nav .logo {
     background-color: var(--buttonhover);
 }
 
-.hero-body-section {
-    background-color: var(--body-Background-Color);
-}
 /* Container for complete hero section */
 .hero-section {
     display: flex;
     width: 100%;
     background-color: var(--body-Background-Color)
+}
+/* Left hero section */
+.hero-section-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: right;
+    width: 60%;
+    margin-left: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 50px;
+    background-color: var(--content-Background-Color);
+    text-align: center;
+
+}
+.hero-titel {
+    display: flex;
+  max-width: 100%;
+  position: relative;
+    color: var(--text-color);
+    font-size: 35px;
+    font-family: Arial, sans-serif; 
+    overflow: hidden;
+    border-right: .15em solid var(--text-color);
+    white-space: nowrap;
+    animation: typing 5s steps(50), blink 1s step-end infinite;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
+    cursor: default;
+    user-select: none;
+}
+
+@keyframes typing {
+    from {
+        width: 0
+    }
+
+    to {
+        width: 100%
+    }
+}
+
+@keyframes blink {
+
+    from,
+    to {
+        border-color: transparent
+    }
+
+    50% {
+        border-color: var(--text-color)
+        
+    }
+
+}
+
+.herotext {
+    color: var(--text-color);
+    line-height: 1.5;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20px;
+    cursor: default;
+    user-select: none;
+}
+
+.btnspendmeacoffee {
+    background-color: var(--button);
+    color: var(--text-color);
+    border: none;
+    border-radius: 6px;
+    padding: 10px 16px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.btnspendmeacoffee::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    background-image: url("/img/metamask_icon.png");
+    background-size: cover;
+}
+
+.btnspendmeacoffee:hover {
+    background-color: var(--buttonhover);
+}
+
+/* Right hero section */
+.hero-section-right {
+    display: flex;
+    justify-content: left;
+    align-items:center;
+    width: 40%;
+    margin-right: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 50px;
+    background-color: var(--content-Background-Color);
+
+
+}
+
+.coffee-image {
+    display: flex;
+    align-items:baseline;
+    justify-content: center;
+    width: 300px;
+    height: auto;
+
 }
