--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
-  }
+}
+
 /*Header*/
 nav {
     background: var(--header-background-color);
@@ -12,7 +13,7 @@ nav {
     justify-content: space-between;
     height: 80px;
     position: sticky;
-	top: 0;
+    top: 0;
 }
 
 nav .mainMenu {
@@ -26,7 +27,7 @@ nav .mainMenu li a {
     text-decoration: none;
     text-transform: uppercase;
     color: var(--text-color);
-    font-size: 18px;
+    font-size: var(--navlinks-Desktop-Size);
     transition: 0.2s ease;
 }
 
@@ -68,7 +69,7 @@ nav .logo {
     border: none;
     border-radius: 6px;
     padding: 10px 16px;
-    font-size: 16px;
+    font-size: var(--button-Desktop-Size);
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.2s ease-in-out;
@@ -96,6 +97,7 @@ nav .logo {
     width: 100%;
     background-color: var(--body-Background-Color)
 }
+
 /* Left hero section */
 .hero-section-left {
     display: flex;
@@ -111,47 +113,20 @@ nav .logo {
     text-align: center;
 
 }
-.hero-titel {
-    display: flex;
-  max-width: 100%;
-  position: relative;
-    color: var(--text-color);
-    font-size: 35px;
-    font-family: Arial, sans-serif; 
-    overflow: hidden;
-    border-right: .15em solid var(--text-color);
-    white-space: nowrap;
-    animation: typing 5s steps(50), blink 1s step-end infinite;
-    margin-top: 10px;
+
+.gap {
     margin-bottom: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
+}
+
+#herotitel {
+    width: 100%;
+    padding: 20px;
+    height: auto;
+    color: var(--text-color);
+    font-size: var(--h2-Desktop-Size);
+    font-family: Arial, sans-serif;
     cursor: default;
     user-select: none;
-}
-
-@keyframes typing {
-    from {
-        width: 0
-    }
-
-    to {
-        width: 100%
-    }
-}
-
-@keyframes blink {
-
-    from,
-    to {
-        border-color: transparent
-    }
-
-    50% {
-        border-color: var(--text-color)
-        
-    }
-
 }
 
 .herotext {
@@ -159,7 +134,7 @@ nav .logo {
     line-height: 1.5;
     text-decoration: none;
     font-weight: bold;
-    font-size: 20px;
+    font-size: var(--p-Desktop-Size);
     cursor: default;
     user-select: none;
 }
@@ -170,7 +145,7 @@ nav .logo {
     border: none;
     border-radius: 6px;
     padding: 10px 16px;
-    font-size: 16px;
+    font-size: var(--button-Desktop-Size);
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.2s ease-in-out;
@@ -197,7 +172,7 @@ nav .logo {
 .hero-section-right {
     display: flex;
     justify-content: left;
-    align-items:center;
+    align-items: center;
     width: 40%;
     margin-right: 50px;
     margin-top: 50px;
@@ -210,9 +185,113 @@ nav .logo {
 
 .coffee-image {
     display: flex;
-    align-items:baseline;
+    align-items: baseline;
     justify-content: center;
     width: 300px;
     height: auto;
 
+}
+
+/* Coffe-Spender Message Board */
+.spender-message-container {
+    background-color: var(--body-Background-Color);
+    padding-bottom: 20px;
+}
+
+.spender-message-header {
+    display: grid;
+    text-align: center;
+    color: var(--text-color);
+    font-weight: bold;
+    font-size: var(--h2-Desktop-Size);
+    margin-bottom: 50px;
+    cursor: default;
+    user-select: none;
+
+}
+
+.spender-message-section {
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 50px;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 50px;
+    padding-bottom: 100px;
+    background-color: var(--content-Background-Color);
+
+
+}
+
+.comment-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.comment-list li {
+    border-top: 1px solid var(--text-color);
+    padding: 10px;
+    cursor: default;
+    user-select: none;
+}
+
+.comment-list li:first-child {
+    border-top: none;
+}
+
+.comment-list .kommentar-name {
+    font-weight: bold;
+    margin-right: 10px;
+    color: var(--text-color);
+}
+
+.comment-list .kommentar-text {
+    margin-left: 10px;
+    color: var(--text-color);
+}
+
+Footer {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    padding: 0;
+    bottom: 0;
+    height: 40px;
+    background-color: var(--header-background-color);
+    color: var(--text-color);
+    grid-row: 3;
+    grid-column: 1 / -1;
+}
+
+.copyright {
+    text-align: right;
+    margin-right: 20px;
+    cursor: default;
+    user-select: none;
+}
+
+.social-media a {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    color: var(--text-color);
+    font-size: 18px;
+    text-decoration: none;
+}
+
+.social-media a::before {
+    content: "";
+    display: inline-block;
+    background-image: url('../img/discord-logo.svg');
+    background-size: cover;
+    width: 40px;
+    height: 40px;
+    margin-right: 5px;
+}
+
+.social-media a:hover {
+    color: var(--link-color-on-hover);
 }
