--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ nav .logo {
 /* Header/Connect-Metamask Button */
 .btnconnectmetamask {
     margin-right: 20px;
-    background-color: var(--button);
+    background-image: var(--button);
     color: var(--text-color);
     border: none;
     border-radius: 6px;
@@ -95,9 +95,13 @@ nav .logo {
 }
 
 .btnconnectmetamask:hover {
-    background-color: var(--buttonhover);
+    background-image: var(--buttonhover);
 }
-
+#profile{
+    margin-right: 30px;
+    vertical-align: middle;
+    cursor: pointer;
+}
 /* Container for complete hero section */
 .hero-section {
     display: flex;
@@ -126,6 +130,7 @@ nav .logo {
 }
 
 #herotitel {
+    line-height: 1.25;
     width: 100%;
     padding: 20px;
     height: auto;
@@ -134,6 +139,22 @@ nav .logo {
     font-family: Arial, sans-serif;
     cursor: default;
     user-select: none;
+}
+
+.cursor {
+    height: var(--h2-Desktop-Size);
+    transform: scaleY(0.700) scaleX(0.600);
+    display: inline-block; 
+    animation: blink 1s infinite;
+}
+
+@keyframes blink {
+    0%, 49% {
+        opacity: 1;
+    }
+    50%, 100% {
+        opacity: 0;
+    }
 }
 
 .herotext {
@@ -147,7 +168,7 @@ nav .logo {
 }
 
 .btnspendmeacoffee {
-    background-color: var(--button);
+    background-image: var(--button);
     color: var(--text-color);
     border: none;
     border-radius: 6px;
@@ -172,7 +193,7 @@ nav .logo {
 }
 
 .btnspendmeacoffee:hover {
-    background-color: var(--buttonhover);
+    background-image: var(--buttonhover);
 }
 
 /* Right hero section */
@@ -269,7 +290,7 @@ Footer {
     position: relative;
     padding: 0;
     bottom: 0;
-    height: 40px;
+    height: 60px;
     background-color: var(--header-background-color);
     color: var(--text-color);
     grid-row: 3;
