--- a/css/style.css
+++ b/css/style.css
@@ -97,10 +97,48 @@ nav .logo {
 .btnconnectmetamask:hover {
     background-image: var(--buttonhover);
 }
+/* Profile after Wallet is connectet */
+#walletContainer {
+    display: flex;
+    align-items: center;
+}
 #profile{
     margin-right: 30px;
     vertical-align: middle;
     cursor: pointer;
+}
+/* Dropdown styles */
+.dropdown-content {
+    background-image: var(--profile-menu-background-color);
+    border-radius: 8px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    padding: 12px 16px;
+    position: absolute;
+    right: 50px;
+    top: 80px;
+    z-index: 1;
+    padding-top: 30px;
+}
+
+.addresslabel,
+.balancelabel {
+    font-size: 14px;
+    color: var(--text-color);
+    margin-bottom: 4px;
+}
+
+.addressvalue,
+.balancevalue {
+    font-size: 16px;
+    color: var(--text-color);
+    margin-bottom: 12px;
+    word-wrap: break-word;
+}
+
+#profileImage {
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
 }
 /* Container for complete hero section */
 .hero-section {
